@@ -1,4 +1,5 @@
         - Remove unnecessary branch in recursive call
+        - Support inline-structures parameter
 
 1.00 2021-02-18 Release
         - -s option added that uses sentence boundaries provided by the KorAP tokenizer (-tk)
